@@ -4,7 +4,7 @@ export(AnotA, discrimPwr, discrimSS, discrim, #discrimr,
        discrimSim, duotrio, threeAFC, triangle, twoAFC, SDT, ROC, AUC,
        samediff, findcr, betabin, samediffSim, discrimR, clls,
        samediffPwr, twoAC, rescale, psyfun, psyinv, psyderiv, pc2pd,
-       pd2pc, d.primePwr, d.primeSS, twoACpwr) 
+       pd2pc, d.primePwr, d.primeSS, twoACpwr, clm2twoAC) 
 
 S3method(print, betabin)
 S3method(summary, betabin)
