@@ -69,3 +69,7 @@ March 3. 2011: version 1.2.7:
 - added exact power computations for the 2-AC protocol in function
   twoACpwr
 
+March 8. 2011: version 1.2.8:
+
+- added clm2twoAC function for extracting 2-AC parameters etc. from
+  cumulative link models (clm[m]s from package ordinal)
